# OSGraph

./: .gitignore  CODE_OF_CONDUCT.md  README-cn.md  README-en.md  README.md
osgraph-service-py/: .env.template  .flake8  .gitignore  config.py  pyproject.toml  run.py
osgraph-service-py/app/: __init__.py
osgraph-service-py/app/dal/graph/: tugraph.py
osgraph-service-py/app/dal/search/: es.py
osgraph-service-py/app/llm/: openai_client.py
osgraph-service-py/app/llm/prompt_templates/: graph_summary.py
osgraph-service-py/app/managers/: develop_activities.py  fulltext_search.py  graph_list.py  os_interest.py  os_partner.py  project_community.py  project_contribution.py  project_ecology.py
osgraph-service-py/app/models/: default_graph.py  graph_view.py  system_graph.py
osgraph-service-py/app/routes/: develop_activities.py  fulltext_search.py  graph_list.py  os_interest.py  os_partner.py  project_community.py  project_contribution.py  project_ecology.py  render_graph.py  render_graph_2.py
osgraph-service-py/app/script/: g6_render.js
osgraph-service-py/app/services/: __init__.py  fulltext_search.py  graph_list.py  graph_summary.py
osgraph-service-py/app/services/graph_services/: __init__.py  base.py  develop_activities.py  os_interest.py  os_partner.py  project_community.py  project_contribution.py  project_ecology.py
osgraph-service-py/app/utils/: custom_exceptions.py  logger.py  response_handler.py  user_repo_converter.py
osgraph-service-py/static/: README.md
osgraph-service-py/tests/services/: test_fulltext_search.py  test_graph_list.py
(+355 files in other folders)
